<resources>
    <string name="app_name">Mind Shift</string>
    <string name="title_activity_maps">Map</string>
    <string name="agregar_denuncia">Agregar denuncia</string>
    <string name="llamar_ahora">Llamar ahora</string>
    <string name="bienvenido">Bienvenido, de nuevo</string>
    <string name="n_mero">Número:</string>
    <string name="_987654321">987654321</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="pass">********</string>
    <string name="olvidaste_la_contrase_a">Olvidaste la contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="saldo_restante_s_20_00">Saldo restante: S/ 19.50</string>
    <string name="pagar">Recargar</string>
    <string name="ingrese_un_monto_a_recargar">Ingrese un monto a recargar:</string>
    <string name="_10_00">S/ 100.00</string>
    <string name="saldo_actual_s_22_50">Saldo Actual: S/ 22.50</string>
    <string name="historial_de_viajes">Historial de Viajes</string>
    <string name="s_19_50">S/ 19.50</string>
    <string name="viajes_realizados">Núm de Viajes</string>
    <string name="hoy">Hoy</string>
    <string name="ayer">Ayer</string>
    <string name="_11_02am">11:02am</string>
    <string name="s_1_70">S/ 1.70</string>
    <string name="ahorro">Ahorro:</string>
    <string name="s_18_30">+S/ 18.30</string>
    <string name="_18">18</string>
    <string name="nombre_de_la_empresa_la_40_sac">Nombre de la empresa: La 40 SAC</string>
    <string name="aforo_30_asientos">Aforo: 30 asientos</string>
    <string name="asientos_libres_18_asientos_libres">Asientos libres: 15 asientos libres</string>
    <string name="tarifa_s_1_30">Tarifa: S/ 1.30</string>
    <string name="_29">50%</string>
    <string name="_4_viajes">4 viajes</string>
    <string name="informaci_n_del_bus">Información del bus:</string>
</resources>