<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Recarga">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_curve5"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="30dp"
        android:text=""
        android:textColor="@color/blancoD"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/convergence"
        android:text="@string/historial_de_viajes"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:fontFamily="@font/convergence"
        android:text="@string/s_19_50"
        android:textColor="@color/blanco"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/ic_circle"
        android:backgroundTint="@color/blanco"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/convergence"
            android:text="@string/viajes_realizados"
            android:textColor="@color/rojo"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/convergence"
            android:text="@string/_18"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/convergence"
            android:text="@string/ahorro"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toStartOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/convergence"
            android:text="@string/s_18_30"
            android:textColor="#4CAF50"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hoy"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/_11_02am"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/s_1_70"
                android:textColor="@color/rojo"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:background="@color/blancoF"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="-16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/convergence"
                android:text="Paradero Javier Prado\nRumbo a La Marina"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/textView10" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ayer"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="8:47pm"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/s_1_70"
                android:textColor="@color/rojo"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <View
                android:id="@+id/view3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:background="@color/blancoF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="-16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/convergence"
                android:text="Paradero La Marina\nRumbo a Javier Prado"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="@+id/textView14" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="3:12pm"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/s_1_70"
                android:textColor="@color/rojo"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <View
                android:id="@+id/view4"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:background="@color/blancoF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="-16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/convergence"
                android:text="Paradero Javier Prado\nRumbo a La Marina"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/textView18" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="11:13am"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:text="@string/s_1_70"
                android:textColor="@color/rojo"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/textView20"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <View
                android:id="@+id/view5"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginStart="75dp"
                android:layout_marginLeft="75dp"
                android:background="@color/blancoF"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="-16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/convergence"
                android:text="Paradero Javier Prado\nRumbo a La Marina"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/view5"
                app:layout_constraintTop_toTopOf="@+id/textView20" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_recarga"
        android:backgroundTint="@color/blancoF"
        android:elevation="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/convergence"
            android:text="@string/ingrese_un_monto_a_recargar"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/recargaMonto"
            app:layout_constraintStart_toStartOf="@+id/recargaMonto" />

        <EditText
            android:id="@+id/recargaMonto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/convergence"
            android:hint="@string/_10_00"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="6"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_circle"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/convergence"
            android:onClick="mercadopago"
            android:text="@string/pagar"
            android:textColor="@color/blanco"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>